<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/main_btn_configNetwork"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToNetworkSettings"
                android:text="@string/main_btn_Network"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp" />

            <Button
                android:id="@+id/main_btn_configMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToMenuSettings"
                android:text="@string/main_btn_configMenu"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="56dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/main_btn_takeOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToCreateNewOrder"
                android:text="@string/main_btn_CreateOrder"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="104dp" />

            <Button
                android:id="@+id/main_btn_activeOrders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToActiveOrders"
                android:text="@string/main_btn_ActiveOrders"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="152dp" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/main_btn_salesHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToArchive"
                android:text="@string/main_btn_Archives"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="200dp" />

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/main_btn_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="goToRole"
                android:text="@string/main_btn_Role"
                tools:layout_editor_absoluteX="148dp"
                tools:layout_editor_absoluteY="327dp" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/main_tv_connectionStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>